wp_derive/tests/error_unexpected_wp_context_literal.stderr
error: Expected 'edit', 'embed' or 'view', found 'Edit'
 --> tests/error_unexpected_wp_context_literal.rs:5:17
  |
5 |     #[WPContext(Edit)]
  |                 ^^^^
